# polkadot-sdk-solochain-template

./: Cargo.toml  README.md
.github/workflows/: ci.yml
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
