[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.3" }
frame-benchmarking-cli = { version = "40.0.0", default-features = false }
frame-system = { version = "36.0.0", default-features = false }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.23.2" }
pallet-transaction-payment = { version = "36.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "38.0.0", default-features = false }
sc-basic-authorship = { version = "0.42.0", default-features = false }
sc-cli = { version = "0.44.0", default-features = false }
sc-client-api = { version = "35.1.0", default-features = false }
sc-consensus = { version = "0.41.0", default-features = false }
sc-consensus-aura = { version = "0.42.0", default-features = false }
sc-consensus-grandpa = { version = "0.27.0", default-features = false }
sc-executor = { version = "0.39.0", default-features = false }
sc-network = { version = "0.42.0", default-features = false }
sc-offchain = { version = "37.0.0", default-features = false }
sc-rpc-api = { version = "0.41.0", default-features = false }
sc-service = { version = "0.43.0", default-features = false }
sc-telemetry = { version = "22.0.0", default-features = false }
sc-transaction-pool = { version = "35.0.0", default-features = false }
sc-transaction-pool-api = { version = "35.0.0", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
solochain-template-runtime = { version = "0.1.0" }
sp-api = { version = "33.0.0", default-features = false }
sp-block-builder = { version = "33.0.0", default-features = false }
sp-blockchain = { version = "35.1.0", default-features = false }
sp-consensus-aura = { version = "0.39.0", default-features = false }
sp-consensus-grandpa = { version = "20.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-inherents = { version = "33.0.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-keyring = { version = "38.0.0", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
sp-timestamp = { version = "33.0.0", default-features = false }
substrate-frame-rpc-system = { version = "36.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
