[package]
name = "solochain-template-node"
description = "A solochain node template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "MIT-0"
edition = "2021"
publish = false

build = "build.rs"

[lints]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
serde_json = { version = "1.0.114", default-features = true }
jsonrpsee = { version = "0.22", features = ["server"] }

# substrate client
sc-cli = { version = "0.39.0" }
sp-core = { version = "31.0.0" }
sc-executor = { version = "0.35.0" }
sc-network = { version = "0.37.0" }
sc-service = { version = "0.38.0" }
sc-telemetry = { version = "17.0.0" }
sc-transaction-pool = { version = "31.0.0" }
sc-transaction-pool-api = { version = "31.0.0" }
sc-offchain = { version = "32.0.0" }
sc-consensus-aura = { version = "0.37.0" }
sp-consensus-aura = { version = "0.35.0" }
sc-consensus = { version = "0.36.0" }
sc-consensus-grandpa = { version = "0.22.0" }
sp-consensus-grandpa = { version = "16.0.0" }
sc-client-api = { version = "31.0.0" }
sc-rpc-api = { version = "0.36.0" }
sc-basic-authorship = { version = "0.37.0" }

# substrate primitives
sp-runtime = { version = "34.0.0" }
sp-io = { version = "33.0.0" }
sp-timestamp = { version = "29.0.0" }
sp-inherents = { version = "29.0.0" }
sp-keyring = { version = "34.0.0" }
sp-api = { version = "29.0.0" }
sp-blockchain = { version = "31.0.0" }
sp-block-builder = { version = "29.0.0" }

# frame and pallets
frame-system = { version = "31.0.0" }
pallet-transaction-payment = { version = "31.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "33.0.0" }
substrate-frame-rpc-system = { version = "31.0.0" }

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = { version = "35.0.1" }

# Local Dependencies
solochain-template-runtime = { path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { version = "0.41.0", optional = true }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"solochain-template-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"solochain-template-runtime/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
